; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_javascript.c_s_push_file.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_javascript.c_s_push_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, i8*)* @s_push_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @s_push_file(i32* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = call i64 @js_try(i32* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %4
  store i32 1, i32* %5, align 4
  br label %22

14:                                               ; preds = %4
  %15 = load i32*, i32** %6, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = load i32, i32* %8, align 4
  %18 = load i8*, i8** %9, align 8
  %19 = call i32 @af_push_file(i32* %15, i8* %16, i32 %17, i8* %18)
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @js_endtry(i32* %20)
  store i32 0, i32* %5, align 4
  br label %22

22:                                               ; preds = %14, %13
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i64 @js_try(i32*) #1

declare dso_local i32 @af_push_file(i32*, i8*, i32, i8*) #1

declare dso_local i32 @js_endtry(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
